plugins {
    id "com.zyxist.chainsaw" version "0.1.3"
}

javaModule.name = 'jdk.httpclient.test'

group 'jdk.incubator'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javaModule.patchModules 'com.sun.net.httpserver:http': 'jdk.httpserver'

configure(allprojects) { project ->

    apply plugin: 'maven'
    apply plugin: 'java'
    apply plugin: 'java-library'

    sourceCompatibility = 1.9
    targetCompatibility = 1.9

    repositories {
        mavenCentral()
    }

    dependencies {
        patch 'com.sun.net.httpserver:http:20070405'
        compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
        compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.26'
        compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.26'
        compile group: 'javax.activation', name: 'activation', version: '1.1.1'
        compile group: 'com.sun.net.httpserver', name: 'http', version: '20070405'
        testCompile group: 'junit', name: 'junit', version: '4.12'
        testCompile group: 'org.testng', name: 'testng', version: '6.14.2'
    }
}

subprojects {
    afterEvaluate {
        repositories {
            jcenter()
        }

        gradle.projectsEvaluated {
            tasks.withType(JavaCompile) {
                options.compilerArgs.add("-Xlint:unchecked")
                options.compilerArgs.add("-Xlint:deprecation")
                options.compilerArgs.addAll(["--add-modules", "jdk.incubator.httpclient"])
            }
        }

        compileTestJava {
            doFirst {
                options.compilerArgs = [
                        '--add-modules', 'jdk.incubator.httpclient',
                ]
            }
        }
    }
}

